add s81 activity code

--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@
 			rgba(0, 0, 0, 0.50),
 			rgba(0, 0, 0, 0.50)
 		),
-		url("https://wallpapers.com/images/hd/gundam-4k-fqqjv1hrnv1zwjcg.jpg");
+		url("https://www.chromethemer.com/download/hd-wallpapers/gundam-3840x2160.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 	height: 600px;
